# mecha-oracle

./: CLAUDE.md  Cargo.toml
docs/: design-notes-effectstep-damage.md  design-notes-trigger-architecture.md  maintainers-guide.md  todo.md
docs/superpowers/plans/: 2026-06-02-phase-2-static-keywords.md  2026-06-04-cli-restructure.md  2026-06-04-frontend-ui.md  2026-06-05-priority-and-combat-ui.md  2026-06-05-turn-flow-cr-compliance.md  2026-06-06-oracle-span-parsing.md  2026-06-07-activated-abilities.md  2026-06-07-mana-symbols.md  2026-06-08-layout-routing.md  2026-06-08-triggered-abilities.md  2026-06-09-card-click-ui.md  2026-06-09-instants-sorceries.md  2026-06-09-stack-ui-column.md  2026-06-09-stack.md  2026-06-10-permanent-state-split.md  2026-06-10-ui-pass-2.md  2026-06-11-keyword-combat-triggers-cycling-prowess.md  2026-06-11-targeting-system.md  2026-06-12-combat-declaration-autoskip.md  (+22 more)
docs/test-decks/: basic.json  blue_abilities.json  green_abilities.json
src/: lib.rs  main.rs  serve.css  serve.html  serve.js  serve.rs
src/cards/: downloader.rs  mod.rs  scryfall.rs
src/engine/: activated.rs  casting.rs  combat.rs  costs.rs  cycling.rs  equip.rs  mana.rs  mod.rs  stack.rs  state_based_actions.rs  targeting.rs  triggered.rs  turn.rs  ward.rs
src/parser/: mod.rs  oracle.rs
src/types/: ability.rs  card.rs  card_object.rs  counter.rs  effect.rs  game_state.rs  ids.rs  mana.rs  mod.rs  permanent.rs  player.rs  stack.rs  step.rs  zone.rs
tests/: cr_examples.rs  scripted_game.rs  targeting.rs
tests/fixtures/: oracle_cards_test.json
(+38 files in other folders)
