[package]
name = "mecha-oracle"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1"
ureq = { version = "3", features = ["json"] }
directories = "6"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
